# gopro2gpx

./: .gitignore  README.md  app.manifest  config.py  gopro2gpx.py  gopro2gpx_gui.py  gopro2gpx_gui_ENG.py  gopro2gpx_gui_SPA.py  gpshelper.py  instalador.spec  klvdata.py  pyproject.toml  setup.py
.github/workflows/: github_test.yml
gopro2gpx/: __init__.py  __main__.py  config.py  ffmpegtools.py  fourCC.py  gopro2gpx.py  gpmf.py  gpshelper.py  highlights.py  klvdata.py
samples/: fusion.csv  fusion.gpx  fusion.kml  gopro7.gpx  gopro7.kml  hero05.csv  hero05.gpx  hero05.kml  hero06+ble.csv  hero06+ble.gpx  hero06+ble.kml  hero06.csv  hero06.gpx  hero06.kml  hero07.csv  hero07.gpx  hero07.kml  hero11.csv  hero11.gpx  hero11.kml  hero13.csv  hero13.gpx  hero13.kml  hero5.gpx  hero6+ble.gpx  hero6.gpx  karma.csv  karma.gpx  karma.kml
src/gopro2gpx/: gpmf.py  klvdata.py
src/gopro2gpx/gui/: __init__.py  i18n.py  qt_app.py
test/: fusion.raw  test_samples.py
tests/: test_samples.py
